rnc/src/snapshots/muffy_rnc__tests__parse_file-72.snap
---
source: rnc/src/lib.rs
expression: parse_schema(&read_to_string(&path).unwrap()).unwrap()
---
Schema {
    declarations: [
        DefaultNamespace(
            "http://www.w3.org/2000/svg",
        ),
        Namespace(
            NamespaceDeclaration {
                prefix: "a",
                uri: "http://relaxng.org/ns/compatibility/annotations/1.0",
            },
        ),
    ],
    body: Pattern(
        Grammar(
            Grammar {
                items: [
                    Define(
                        Definition {
                            name: "SVG.View.extra.class",
                            combine: None,
                            pattern: NotAllowed,
                        },
                    ),
                    Define(
                        Definition {
                            name: "SVG.View.class",
                            combine: Some(
                                Choice,
                            ),
                            pattern: Choice(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "view",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.View.extra.class",
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                    Annotation(
                        Annotation {
                            name: Name {
                                prefix: Some(
                                    "a",
                                ),
                                local: "documentation",
                            },
                            attributes: [],
                        },
                    ),
                    Define(
                        Definition {
                            name: "SVG.view.content",
                            combine: None,
                            pattern: Many0(
                                Name(
                                    Name {
                                        prefix: None,
                                        local: "SVG.Description.class",
                                    },
                                ),
                            ),
                        },
                    ),
                    Define(
                        Definition {
                            name: "view",
                            combine: None,
                            pattern: Element {
                                name_class: Name(
                                    Name {
                                        prefix: None,
                                        local: "view",
                                    },
                                ),
                                pattern: Group(
                                    [
                                        Name(
                                            Name {
                                                prefix: None,
                                                local: "attlist.view",
                                            },
                                        ),
                                        Name(
                                            Name {
                                                prefix: None,
                                                local: "SVG.view.content",
                                            },
                                        ),
                                    ],
                                ),
                            },
                        },
                    ),
                    Define(
                        Definition {
                            name: "attlist.view",
                            combine: Some(
                                Interleave,
                            ),
                            pattern: Group(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Core.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.External.attrib",
                                        },
                                    ),
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "viewBox",
                                                },
                                            ),
                                            pattern: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "ViewBoxSpec.datatype",
                                                },
                                            ),
                                        },
                                    ),
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "preserveAspectRatio",
                                                },
                                            ),
                                            pattern: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "PreserveAspectRatioSpec.datatype",
                                                },
                                            ),
                                        },
                                    ),
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "zoomAndPan",
                                                },
                                            ),
                                            pattern: Choice(
                                                [
                                                    Value {
                                                        name: None,
                                                        value: "disable",
                                                    },
                                                    Value {
                                                        name: None,
                                                        value: "magnify",
                                                    },
                                                ],
                                            ),
                                        },
                                    ),
                                    Optional(
                                        Attribute {
                                            name_class: Name(
                                                Name {
                                                    prefix: None,
                                                    local: "viewTarget",
                                                },
                                            ),
                                            pattern: Text,
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                ],
            },
        ),
    ),
}
