rnc/src/snapshots/muffy_rnc__tests__parse_file-74.snap
---
source: rnc/src/lib.rs
expression: parse_schema(&read_to_string(&path).unwrap()).unwrap()
---
Schema {
    declarations: [
        Namespace(
            NamespaceDeclaration {
                prefix: "a",
                uri: "http://relaxng.org/ns/compatibility/annotations/1.0",
            },
        ),
    ],
    body: Pattern(
        Grammar(
            Grammar {
                items: [
                    Definition(
                        Definition {
                            name: "ClipValue.datatype",
                            combine: None,
                            pattern: Name(
                                Name {
                                    prefix: Some(
                                        "xsd",
                                    ),
                                    local: "string",
                                },
                            ),
                        },
                    ),
                    Definition(
                        Definition {
                            name: "SVG.clip.attrib",
                            combine: None,
                            pattern: Optional(
                                Attribute {
                                    name_class: Name(
                                        Name {
                                            prefix: None,
                                            local: "clip",
                                        },
                                    ),
                                    pattern: Name(
                                        Name {
                                            prefix: None,
                                            local: "ClipValue.datatype",
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                    Definition(
                        Definition {
                            name: "SVG.overflow.attrib",
                            combine: None,
                            pattern: Optional(
                                Attribute {
                                    name_class: Name(
                                        Name {
                                            prefix: None,
                                            local: "overflow",
                                        },
                                    ),
                                    pattern: Choice(
                                        [
                                            Value {
                                                name: Some(
                                                    Name {
                                                        prefix: None,
                                                        local: "string",
                                                    },
                                                ),
                                                value: "visible",
                                            },
                                            Value {
                                                name: Some(
                                                    Name {
                                                        prefix: None,
                                                        local: "string",
                                                    },
                                                ),
                                                value: "hidden",
                                            },
                                            Value {
                                                name: Some(
                                                    Name {
                                                        prefix: None,
                                                        local: "string",
                                                    },
                                                ),
                                                value: "scroll",
                                            },
                                            Value {
                                                name: Some(
                                                    Name {
                                                        prefix: None,
                                                        local: "string",
                                                    },
                                                ),
                                                value: "auto",
                                            },
                                            Value {
                                                name: Some(
                                                    Name {
                                                        prefix: None,
                                                        local: "string",
                                                    },
                                                ),
                                                value: "inherit",
                                            },
                                        ],
                                    ),
                                },
                            ),
                        },
                    ),
                    Definition(
                        Definition {
                            name: "SVG.Viewport.extra.attrib",
                            combine: None,
                            pattern: Empty,
                        },
                    ),
                    Definition(
                        Definition {
                            name: "SVG.Viewport.attrib",
                            combine: Some(
                                Interleave,
                            ),
                            pattern: Group(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.clip.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.overflow.attrib",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: "SVG.Viewport.extra.attrib",
                                        },
                                    ),
                                ],
                            ),
                        },
                    ),
                ],
            },
        ),
    ),
}
